<resources>
    <string name="app_name">一元夺宝</string>
    <string name="action_settings">Settings</string>

    <string name="APP_NAME">一元夺宝</string>
    <string name="app_getin">立即体验</string>
    <string name="app_version">1.0.0</string>

    <string name="checkgoods_hot">人气</string>
    <string name="checkgoods_newest">最新</string>
    <string name="checkgoods_rate">进度</string>
    <string name="checkgoods_all">总需人次</string>
    <!--进度条文字-->
    <string name="progress_schedule">进度：</string>
    <string name="progress_qishu">期号：</string>
    <string name="progress_allnum">总需人次：</string>
    <string name="progress_renum">剩余人次：</string>
    <!--搜索-->
    <string name="search_othertags">您是不是想找</string>
    <string name="search_mytags">我的搜索记录</string>
    <string name="search_num">搜索当前幸运码</string>
    <string name="search_allbuy">全部加入购物车</string>
    <!--最新揭晓-->
    <string name="zxjx_username">中奖用户</string>
    <string name="zxjx_awardnum">中奖号码</string>
    <string name="zxjx_awardtime">中奖时间</string>
    <string name="zxjx_joinnum">参与人次</string>
    <!--登陆 注册-->
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="login_forgetpswd">忘记密码</string>
    <string name="login_pswdhint">请输入密码(6-14位数字或字母)</string>
    <string name="login_phonehint">请输入您的手机号码</string>
    <string name="login_third">第三方登陆</string>
    <string name="login_recode">获取验证码</string>
    <string name="login_protocol">《用户使用协议》</string>
    <string name="login_tip">我已阅读并同意</string>
    <!--我的-->
    <string name="mine_ing">正在进行</string>
    <string name="mine_end">已揭晓</string>
    <string name="mine_mult">多期揭晓</string>
    <string name="mine_allrecord">全部夺宝记录</string>
    <string name="mine_luckyrecord">幸运记录</string>
    <string name="mine_buyrecord">购买记录</string>
    <string name="mine_redgrab">红包</string>
    <string name="mine_redgrab_can">可使用</string>
    <string name="mine_redgrab_cant">已过期/已使用</string>
    <string name="mine_redgrab_exchange">红包兑换</string>
    <string name="mine_redgrab_starttime">生效时间</string>
    <string name="mine_redgrab_endtime">失效时间</string>
    <string name="mine_redgrab_money">金额</string>
    <string name="mine_sd">晒单</string>
    <string name="mine_chargerecord">充值记录</string>
    <string name="mine_service">客服</string>
    <!--信息修改-->
    <string name="updata_exchangeredgrab">兑换红包</string>
    <string name="updata_hint">请输入内容</string>

    <!--设置-->
    <string name="setting_notifaction">揭晓通知设置</string>
    <string name="setting_troble">常见问题</string>
    <string name="setting_updata">检查更新</string>
    <string name="setting_about">关于1元夺宝</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_logout">退出登陆</string>
    <string name="setting_isopen">已开启</string>
    <!--购买记录-->
    <string name="record_tobuy">去购买</string>
    <string name="record_winner">购买者</string>
    <string name="record_buyagain">再次购买</string>
    <string name="record_recommon">猜你喜欢</string>
    <string name="record_all">全部</string>
    <string name="record_dfk">待付款</string>
    <string name="record_dfh">待发货</string>
    <string name="record_dcs">待收货</string>
    <!--个人信息-->
    <string name="userinfo_head">头像</string>
    <string name="userinfo_id">ID</string>
    <string name="userinfo_account">账号</string>
    <string name="userinfo_nikename">昵称</string>
    <string name="userinfo_phone">手机号码</string>
    <string name="userinfo_address">地址管理</string>
    <!--地址管理-->
    <string name="address_name">收货人</string>
    <string name="address_name_hint">请输入收货人姓名</string>
    <string name="address_phone">手机号码</string>
    <string name="address_phone_hint">请输入手机号码</string>
    <string name="address_detail">详细地址</string>
    <string name="address_detail_hint">请输入详细地址</string>
    <string name="address_save">保存</string>
    <!--充值-->
    <string name="charge_nodata">充值列表为空</string>
    <string name="charge_cz">充值</string>
    <string name="charge_surecz">确认充值</string>
    <string name="charge_chargeway">充值渠道</string>
    <string name="charge_chargemoney">充值金额</string>
    <string name="charge_10">10</string>
    <string name="charge_20">20</string>
    <string name="charge_30">30</string>
    <string name="charge_50">50</string>
    <string name="charge_100">100</string>
    <string name="charge_hint">请输入充值金额</string>
    <!-- 过滤数据-->
    <string name="app_digits">.@0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM_</string>
    <string name="app_digits_num">0123456789</string>

    <!--xRefresh-->
    <string name="xrefreshview_header_hint_normal">下拉刷新</string>
    <string name="xrefreshview_header_hint_ready">松开刷新数据</string>
    <string name="xrefreshview_header_hint_refreshing">正在刷新...</string>
    <string name="xrefreshview_header_hint_loading">正在加载...</string>
    <string name="xrefreshview_header_hint_loaded">加载完成</string>
    <string name="xrefreshview_header_last_time">上次更新时间：</string>
    <string name="xrefreshview_footer_hint_normal">加载完成</string>
    <string name="xrefreshview_footer_hint_fail">加载失败，请重试</string>
    <string name="xrefreshview_footer_hint_complete">已无更多数据</string>
    <string name="xrefreshview_footer_hint_click">点击加载更多</string>
    <string name="xrefreshview_footer_hint_release">松开加载更多</string>
    <string name="xrefreshview_footer_hint_ready">松开载入更多</string>
    <string name="xrefreshview_never_refresh">从未刷新</string>
    <string name="xrefreshview_refresh_justnow">刚刚刷新</string>
    <string name="xrefreshview_refresh_minutes_ago">%1s分钟之前刷新</string>
    <string name="xrefreshview_refresh_hours_ago">%1s小时之前刷新</string>
    <string name="xrefreshview_refresh_days_ago">%1s天之前刷新</string>
</resources>
