<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_gray"
    android:orientation="vertical">

    <include layout="@layout/include_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/address_name"
            android:textColor="@color/theme_text_gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_realaddr_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/address_name_hint"
            android:padding="3dp"
            android:singleLine="true"
            android:textColor="@color/theme_text_black"
            android:textSize="16sp" />
    </LinearLayout>

    <include layout="@layout/include_line_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address_phone"
            android:textColor="@color/theme_text_gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_realaddr_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/address_phone_hint"
            android:inputType="number"
            android:padding="3dp"
            android:textColor="@color/theme_text_black"
            android:textSize="16sp" />
    </LinearLayout>

    <include layout="@layout/include_line_view" />

    <LinearLayout
        android:id="@+id/ll_realaddr_areachoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="选择省市区"
            android:textColor="@color/theme_text_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/et_realaddr_province"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="请输入省、市、区"
            android:lines="2"
            android:padding="3dp"
            android:textColor="@color/theme_text_black"
            android:textSize="16sp" />
    </LinearLayout>

    <include layout="@layout/include_line_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address_detail"
            android:textColor="@color/theme_text_gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_realaddr_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/address_detail_hint"
            android:lines="2"
            android:maxLength="60"
            android:maxLines="3"
            android:padding="3dp"
            android:textColor="@color/theme_text_black"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/bt_realaddr_submit"
        style="@style/Default_Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/main_red"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/address_save" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


</LinearLayout>