<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_gray"
    android:orientation="vertical">

    <include layout="@layout/include_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_phone" />

        <EditText
            android:id="@+id/ed_regist_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/trans"
            android:gravity="center_vertical"
            android:hint="@string/login_phonehint"
            android:inputType="phone"
            android:padding="@dimen/common_padding"
            android:textColor="@color/theme_text_gray"
            android:textColorHint="@color/theme_text_gray"
            android:textSize="@dimen/main_text" />


        <TextView
            android:id="@+id/tv_regist_vcode"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/bg_r4_white_1red"
            android:gravity="center"
            android:text="@string/login_recode"
            android:textColor="@color/main_red"
            android:textSize="12sp" />

    </LinearLayout>

    <include layout="@layout/include_line_view"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_yanzhengma" />

        <EditText
            android:id="@+id/ed_regist_vcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/trans"
            android:ems="14"
            android:gravity="center_vertical"
            android:hint="请输入验证码"
            android:inputType="number"
            android:padding="@dimen/common_padding"
            android:textColor="@color/theme_text_gray"
            android:textColorHint="@color/theme_text_gray"
            android:textSize="@dimen/main_text" />
    </LinearLayout>

    <include layout="@layout/include_line_view"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_password" />

        <EditText
            android:id="@+id/ed_regist_pswd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/trans"
            android:ems="16"
            android:gravity="center_vertical"
            android:hint="@string/login_pswdhint"
            android:inputType="textVisiblePassword"
            android:padding="@dimen/common_padding"
            android:textColor="@color/theme_text_gray"
            android:textColorHint="@color/theme_text_gray"
            android:textSize="@dimen/main_text" />


    </LinearLayout>

    <Button
        android:id="@+id/bt_regist_in"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/main_red"
        android:text="@string/regist"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_regist_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:checked="true"
            android:text="@string/login_tip"
            android:textColor="@color/theme_text_black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_regist_protocol"
            style="@style/Default_Textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="@color/common_text_blue"
            android:text="@string/login_protocol" />

    </LinearLayout>


</LinearLayout>
